<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment" android:background="@drawable/back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"

        android:id="@+id/login" />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/username"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passsword"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:hint="@string/password"
        android:background="@drawable/shape"
        android:textColor="#ffffffff"
        android:textColorHint="@android:color/holo_orange_dark" />
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:background="@drawable/shape"
        android:layout_marginTop="49dp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/passsword"
        android:layout_alignLeft="@+id/passsword"
        android:layout_alignStart="@+id/passsword" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:id="@+id/signup_button"
        android:textColor="#ffffffff"
        android:background="@drawable/shape"
        android:layout_alignBottom="@+id/login_button"
        android:layout_alignRight="@+id/passsword"
        android:layout_alignEnd="@+id/passsword" />
</RelativeLayout>
