<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.UI.FirstSignup$PlaceholderFragment" android:background="@drawable/back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/sign"

        android:id="@+id/signup" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:hint="@string/password"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmpassword"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:text="@string/next"
        android:background="@drawable/shape"
        android:layout_below="@+id/confirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:textColor="#ffffffff" />

</RelativeLayout>

