<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.UI.SecondSignUp$PlaceholderFragment" android:background="@drawable/back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/sign"

        android:id="@+id/signup" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:layout_below="@id/signup"
        android:ems="10"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark"
       />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/phone"
       android:hint="@string/address"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark"

      />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/gender"
        android:layout_below="@+id/address"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:hint="@string/gender"
        android:background="@drawable/shape"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/holo_orange_dark"
       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_button"
        android:text="@string/sign_up"
        android:background="@drawable/shape"
        android:layout_below="@+id/gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView"
        android:layout_above="@+id/phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
